fixing a bug that make the layout break in differents resolutions

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ hr {
     
     margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 
 .key-tile {
@@ -112,17 +112,3 @@ hr {
     align-items: center;
 }
 
-
-@keyframes bgColors {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
-}
